--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Welcome to My Flask Blog!</h1>
+
+    <!-- Add a link to the /add route -->
+    <div>
+        <a href="{{ url_for('add') }}" class="add-link">Add a new post</a>
+    </div>
+
+    <!-- Display all blog posts -->
     {% for post in posts %}
         <div class="post">
             <h2>{{ post.title }}</h2>
