--- a/static/style.css
+++ b/static/style.css
@@ -44,3 +44,16 @@ h1 {
 .add-link:hover {
     background-color: #45a049;
 }
+
+.delete-button {
+    background-color: #FF5733;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.delete-buttom:hover {
+    background-color: #C70039;
+}
