--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,11 @@
             <h2>{{ post.title }}</h2>
             <p><em>Written by {{ post.author }}</em></p>
             <p>{{ post.content }}</p>
+
+            <!-- Add a delete button -->
+            <form action="{{ url_for('delete', post_id=post.id) }}" method="POST" style="display:inline;">
+                <button type="submit" class="delete-button">Delete</button>
+            </form>
         </div>
     {% endfor %}
 </body>
