--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,16 @@
     <!-- Display all blog posts -->
     {% for post in posts %}
         <div class="post">
-            <h2>{{ post.title }}</h2>
-            <p><em>Written by {{ post.author }}</em></p>
-            <p>{{ post.content }}</p>
+            <h2>{{ post['title'] }}</h2>
+            <p><em>Written by {{ post['author'] }}</em></p>
+            <p>{{ post['content'] }}</p>
 
             <!-- Add a delete button -->
-            <form action="{{ url_for('delete', post_id=post.id) }}" method="POST" style="display:inline;">
+            <form action="{{ url_for('delete', post_id=post['id']) }}" method="POST" style="display:inline;">
                 <button type="submit" class="delete-button">Delete</button>
             </form>
+
+            <a href="{{ url_for('update', post_id=post['id']) }}" class="update-link">Update</a>
         </div>
     {% endfor %}
 </body>
