--- a/static/style.css
+++ b/static/style.css
@@ -55,7 +55,7 @@ h1 {
 }
 
 .delete-button:hover {
-    background-color: #C70039; /* FIXED: Corrected typo in CSS class */
+    background-color: #C70039;
 }
 
 .like-button {
